Bug #57702 :: Multiple BLOB fetch fails.